@@ -46,13 +46,13 @@ $TrustedHostsPath = 'WSMan:\localhost\Client\TrustedHosts'
 Add-Type -AssemblyName 'System.ServiceProcess'
 
 # Windows Features
-$useServerManager = ($env:Path -split ';' | Where-Object { $_ } | ForEach-Object { Join-Path -Path $_ -ChildPath 'servermanagercmd.exe' } | Where-Object { Test-Path -Path $_ -PathType Leaf }) -ne $null
+$useServerManager = ($env:Path -split ';' | Where-Object { $_ -and (Test-Path -Path $_ -PathType Container) } | ForEach-Object { Join-Path -Path $_ -ChildPath 'servermanagercmd.exe' } | Where-Object { Test-Path -Path $_ -PathType Leaf }) -ne $null
 $useWmi = $false
 $useOCSetup = $false
 if( -not $useServerManager )
 {
     $useWmi = (Get-WmiObject -List -Namespace 'ROOT\cimv2' | Where-Object { $_.Name -eq 'Win32_OptionalFeature' }) -ne $null
-    $useOCSetup = ($env:Path -split ';' | Where-Object { $_ } | ForEach-Object { Join-Path -Path $_ -ChildPath 'ocsetup.exe' } | Where-Object { Test-Path -Path $_ -PathType Leaf }) -ne $null
+    $useOCSetup = ($env:Path -split ';' | Where-Object { $_ -and (Test-Path -Path $_ -PathType Container) } | ForEach-Object { Join-Path -Path $_ -ChildPath 'ocsetup.exe' } | Where-Object { Test-Path -Path $_ -PathType Leaf }) -ne $null
 }
 
 $windowsFeaturesNotSupported = (-not ($useServerManager -or ($useWmi -and $useOCSetup) ))
